# ecliptic.surf

./: .gitignore  Makefile  README.md  ecliptic-surf.cabal  hie.yaml
.github/workflows/: heroku.yml
app/: Main.hs
nix/: docker.nix  extra-deps.nix  packages.nix  release.nix
nix/extra-pkgs/: almanac.nix
src/: EclipticSurf.hs
src/EclipticSurf/: Chart.hs  Environment.hs  Import.hs  Query.hs  Server.hs  Types.hs  Views.hs
src/EclipticSurf/Effects/: Almanac.hs  Time.hs
src/EclipticSurf/Server/: Pages.hs
src/EclipticSurf/Views/: Helpers.hs  Home.hs  Layout.hs  Mundane.hs  SurfCharts.hs
