cabal-version:      2.4
name:               ecliptic-surf
version:            0.1.0.0

synopsis: surf charts for planetary transits
description: See README at <https://github.com/lfborjas/ecliptic.surf>
category: Astrology

license-file: LICENSE
author:             Luis Borjas Reyes
maintainer:         luisfborjas@gmail.com
bug-reports: https://github.com/lfborjas/ecliptic-surf/issues

extra-source-files: 
    LICENSE
    README.md

source-repository head
    type: git
    location: https://github.com/lfborjas/ecliptic.surf

-- Inspired by:
-- https://github.com/tchoutri/pg-entity/blob/e5fc4cfe8fcaf2a5a6d76f983c9a60b25a57777a/pg-entity.cabal 
common common-extensions
    default-extensions:
        DerivingStrategies
        DerivingVia
        GeneralizedNewtypeDeriving
        NamedFieldPuns
        OverloadedStrings  
    default-language: Haskell2010

common common-ghc-options
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

library
    import: common-extensions
    import: common-ghc-options
    exposed-modules: 
      EclipticSurf

    build-depends:    
      base >= 4.13 && <= 4.17
      ,almanac
      ,containers
      ,swiss-ephemeris >= 1.4.2 && <2
      ,time
      ,lens
      ,Chart
      ,Chart-diagrams
      ,colour
      ,directory
      ,optparse-applicative

    hs-source-dirs:   src

executable ecliptic-surf-exe
    main-is: Main.hs
    build-depends:
      base
      ,ecliptic-surf
    hs-source-dirs: app
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
    default-language:    Haskell2010
