cabal-version:      2.4
name:               ecliptic-surf
version:            0.1.0.0

synopsis: surf charts for planetary transits
description: See README at <https://github.com/lfborjas/ecliptic.surf>
category: Astrology

license-file: LICENSE
author:             Luis Borjas Reyes
maintainer:         luisfborjas@gmail.com
bug-reports: https://github.com/lfborjas/ecliptic-surf/issues

extra-source-files: 
    LICENSE
    README.md

source-repository head
    type: git
    location: https://github.com/lfborjas/ecliptic.surf

-- Inspired by:
-- https://github.com/tchoutri/pg-entity/blob/e5fc4cfe8fcaf2a5a6d76f983c9a60b25a57777a/pg-entity.cabal 
common common-extensions
    default-extensions:
        DerivingStrategies
        DerivingVia
        DeriveGeneric
        DataKinds
        GeneralizedNewtypeDeriving
        NamedFieldPuns
        OverloadedStrings  
        TypeOperators
    default-language: Haskell2010

common common-ghc-options
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

library
    import: common-extensions
    import: common-ghc-options
    exposed-modules: 
      EclipticSurf
      EclipticSurf.Environment
      EclipticSurf.Import
      EclipticSurf.Server
      EclipticSurf.Types
      EclipticSurf.Views
      EclipticSurf.Chart
      EclipticSurf.Query
      EclipticSurf.Server.Pages
      EclipticSurf.Views.Helpers
      EclipticSurf.Views.Home
      EclipticSurf.Views.SurfCharts
      EclipticSurf.Views.Layout
      EclipticSurf.Effects.Almanac
      EclipticSurf.Effects.Time

    build-depends:    
      base >= 4.13 && <= 4.17
      , almanac
      , containers
      , swiss-ephemeris >= 1.4.2 && <2
      , time
      , lens
      , Chart
      , Chart-diagrams
      , colour
      , directory
      , optparse-applicative
      -- from freenatalchart.xyz 
      , cmark
      , diagrams
      , diagrams-contrib
      , diagrams-core
      , diagrams-lib
      , diagrams-svg
      --, envy
      , http-api-data
      , http-types
      , lucid
      , servant
      , servant-lucid
      , servant-server
      , svg-builder
      , timezone-detect >=0.3.0.0
      , validation-selective
      , wai
      , wai-enforce-https
      , warp
      -- from flora.pm
      , bytestring
      , colourista
      , envparse
      -- alternative to interpolate 
      , PyF
      --, raven-haskell -- client for sentry.io
      , text
      --, text-display -- user-facing output
      , wai-logger
      , wai-middleware-static 
      -- from geocode.city
      , fused-effects

    hs-source-dirs:   src

executable ecliptic-surf-exe
    main-is: Main.hs
    build-depends:
      base
      ,ecliptic-surf
    hs-source-dirs: app
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
    default-language:    Haskell2010
